2007-08-17 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: When a link is clicked, search all
    databases selected instead of the database the link belong to. This makes
    more sense since Fantasdic uses the concept of "virtual" dictionary.

2007-08-17 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/print.rb: Fixed a bug in the checking that last page is 
    not blank.

2007-08-16 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/dict.rb: Moved to lib/fantasdic/net/dict.rb.
    * lib/fantasdic/net/sockssocket.rb: SOCKS 5 library by Ryota Tokiwa.
    The library was imported to the source tree for convenience.
    * lib/fantasdic/ui/preferences_dialog.rb: Proxy tab.
    * lib/fantasdic/ui/main_app.rb: Load proxy. Don't crash if connection was
    closed by server.
    * lib/fantasdic.rb: includes.
    * data/fantasdic/glade/preferences_dialog.glade: Proxy tab.

2007-08-16 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/preferences_dialog.rb:
    * lib/fantasdic/ui/main_app.rb:
    * data/fantasdic/config/default.yaml:
    * data/fantasdic/glade/preferences_dialog.glade:
    Added dont_show_at_startup option. This option is going to be useful for
    users who want Fantasdic to be started when the computer boots.

2007-08-16 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Clear history menu item.
    * data/fantasdic/ui/menus.xml: Likewise.

2007-08-16 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/dict.rb: A server is now identified uniquely with four
    elements: host, port, login and password.
    * lib/fantasdic/ui/main_app.rb: Support auth.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Update database list if auth
    provided: an authenticated user may get more databases.
    * data/fantasdic/glade/add_dictionary_dialog.glade: Support auth.

2007-08-15 Mathieu Blondel <mblondel@cvs.gnome.org>
